# llm-quant-benchmark

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
benchmarks/t1_indicator/: generate.py  macd.yaml  reference.py  rsi.yaml  sma.yaml
benchmarks/t2_pattern/: bos_choch.yaml  eqhl.yaml  fvg.yaml  generate.py  highlow.yaml  orderblock.yaml  reference.py  smc_raw_20240101.json
benchmarks/t4_rule/: candles_20240101.json  generate.py  reference.py  rules.yaml
benchmarks/t5_anomaly/: anomaly.yaml  generate.py  injected_200.json  injected_50.json  injected_500.json  reference.py
configs/: bigmodel-direct.yaml  openai-compatible-proxy.yaml  openrouter.yaml
data/: btc_usdt_1h_20240101.csv  btc_usdt_1h_20240601.csv  btc_usdt_1h_20250101.csv
docs/: blog.md  design.md
docs/results/: summary_report.md  t1_indicator_report.md  t2_pattern_report.md  t4_rule_report.md  t5_anomaly_report.md  technical_report.md
llm_quant_bench/: __init__.py  cli.py  client.py  config.py  loader.py  models.py  report.py  runner.py  scorer.py
tests/: test_scorer.py
